--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gulp-watch": "^4.3.5",
     "q": "^1.4.1",
     "rollup": "^0.25.4",
-    "yargs": "^4.2.0"
+    "yargs": "^4.2.0",
+    "colors": "^1.1.2"
   },
   "optionalDependencies": {
     "appdmg": "^0.3.2",
@@ -26,6 +27,7 @@
     "start": "gulp start",
     "pretest": "gulp build --env=test",
     "test": "electron-mocha build --renderer",
-    "install-native": "node ./tasks/install_native_module"
+    "install-native": "node ./tasks/install_native_module",
+    "license": "node ./tasks/license"
   }
 }
